Bug 690349 - corrupt PDF is generated out of PostScript-file with asian fonts
Summary: corrupt PDF is generated out of PostScript-file with asian fonts
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.64
Hardware: PC Windows XP
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-20 09:05 UTC by artifex
Modified: 2009-04-30 05:51 UTC (History)
0 users

See Also:
Customer: 870
Word Size: ---


Attachments
cjk.ps (2.63 MB, application/postscript)
2009-03-20 09:06 UTC, artifex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description artifex 2009-03-20 09:05:52 UTC
When converting the attached PostScript-file cjk.ps to PDF, a PDF-file is
generated, which is corrupt after the 5. page. The first 5 pages are ok, the 6th
page can not be viewed ( either with Ghostscript and AcrobatReader ). 

The PDF is generated with following command:
gs -dNOPAUSE -dBATCH -sDEVICE=pdfwrite -o out.pdf cjk.ps
Comment 1 artifex 2009-03-20 09:06:53 UTC
Created attachment 4854 [details]
cjk.ps
Comment 2 Ray Johnston 2009-03-26 09:42:17 UTC
Bump to custmoer priority
Comment 3 Ken Sharp 2009-03-30 07:18:58 UTC
Looks like the pdfwrite CFF font writing code is writing garbage under some
conditions. Actually it looks like it often writes some rubbish (the name index
seems always to be broken for example), but it seems that this usually doesn't
matter. In this case it does.

I'm still working on the problem, trying to figure out what's wrong with our
existing code. This is likely to take a few more days yet to resolve.
Comment 4 Ken Sharp 2009-03-31 07:03:03 UTC
Fixed in revision 9606, patch and log here :

http://ghostscript.com/pipermail/gs-cvs/2009-March/009181.html